# app_collaboration

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  dev-backend.bat  dev-stop.bat  dev.bat  dev.sh  pyproject.toml  r.md  run.sh
.claude/skills/: add-solution-from-wiki.md  modify-solution.md
.claude/skills/deploy-solution/: SKILL.md
.claude/skills/prepare-deb-package/: SKILL.md
.claude/skills/prepare-docker-images/: SKILL.md
.claude/skills/prepare-esp32-firmware/: SKILL.md
.claude/skills/prepare-himax-firmware/: SKILL.md
.claude/skills/prepare-recamera-nodered/: SKILL.md
.claude/skills/solution-copywriting/: SKILL.md
.claude/skills/solution-validation/: SKILL.md
.github/workflows/: release.yml  test.yml
devices/: catalog.yaml
docs/: deployment-modes.md  solution-configuration-guide.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/design-system/: base.css  components.css  tailwind.preset.js
frontend/src/: main.css  main.js
frontend/src/modules/: api.js  i18n.js  overlay-renderers.js  preview.js  router.js  serial-camera.js  toast.js  updater.js  utils.js
frontend/src/pages/: deploy.js  deployments.js  devices.js  settings.js  solution-detail.js  solution-management.js  solutions.js
provisioning_station/: __init__.py  __main__.py  config.py  main.py
provisioning_station/deployers/: __init__.py  action_executor.py  base.py  docker_deployer.py  docker_remote_deployer.py  esp32_deployer.py  ha_integration_deployer.py  himax_deployer.py  manual_deployer.py  nodered_deployer.py  preview_deployer.py  recamera_cpp_deployer.py  recamera_nodered_deployer.py  script_deployer.py  serial_camera_deployer.py  ssh_binary_deployer.py  ssh_deployer.py  ssh_mixin.py
provisioning_station/factory_firmware/: restore_config.yaml
provisioning_station/factory_firmware/himax/: himax_firmware_20240816.img
provisioning_station/middleware/: auth.py
provisioning_station/models/: __init__.py  api.py  deployment.py  device.py  docker_device.py  kiosk.py  solution.py  version.py  websocket.py
provisioning_station/routers/: __init__.py  api_keys.py  deployments.py  device_management.py  devices.py  docker_devices.py  preview.py  restore.py  serial_camera.py  solutions.py  versions.py  websocket.py
provisioning_station/services/: __init__.py  api_key_manager.py  deployment_engine.py  deployment_history.py  device_detector.py  docker_device_manager.py  face_enroll_logic.py  kiosk_manager.py  markdown_parser.py  mdns_scanner.py  mqtt_bridge.py  pre_check_validator.py  remote_pre_check.py  resource_resolver.py  restore_manager.py  serial_camera_service.py  serial_crud_service.py  serial_port_manager.py  solution_manager.py  stream_proxy.py  update_manager.py  version_manager.py
provisioning_station/utils/: compose_labels.py  recamera_ssh.py  step_registry.py  template.py
pyinstaller/: provisioning-station.spec
scripts/: build-desktop.sh  build-sidecar.py  migrate_to_bilingual.py  port_cleanup.py  simplify_solution_yaml.py  upload_assets_to_cloud.py
shared/: __init__.py  constants.py
solutions/depth_anything_v3/: INTEGRATION_GUIDE.md  guide.md  guide_zh.md  solution.yaml
solutions/depth_anything_v3/devices/: jetson.yaml  preview.yaml
solutions/gpt_oss_20b/: solution.yaml
solutions/gun_detection_frigate/: description.md  description_zh.md  guide.md  guide_zh.md  solution.yaml
solutions/gun_detection_frigate/devices/: jetson.yaml  jetson_local.yaml  r2000_hailo.yaml  r2000_hailo_local.yaml
solutions/indoor_positioning_ble_lorawan/: description.md  description_zh.md  guide.md  guide_zh.md  solution.yaml
solutions/indoor_positioning_ble_lorawan/deploy/: guide.md  guide_zh.md  success.md  success_zh.md
solutions/indoor_positioning_ble_lorawan/devices/: app_local.yaml  app_remote.yaml  (+1 more)
solutions/mcp_external_integration/: solution.yaml
solutions/missionpack_knn/: solution.yaml
solutions/openclaw_deploy/: description.md  description_zh.md  guide.md  guide_zh.md  solution.yaml
solutions/recamera_ecosystem/: description.md  description_zh.md  guide.md  guide_zh.md  solution.yaml
solutions/recamera_heatmap_grafana/: description.md  description_zh.md  guide.md  guide_zh.md  solution.yaml
solutions/recamera_retail_heatmap/: solution.yaml
solutions/rtsp_mqtt_preview/: solution.yaml
solutions/smart_hvac_control/: guide.md  guide_zh.md  solution.yaml
solutions/smart_retail_voice_ai/: guide.md  guide_zh.md  solution.yaml
solutions/smart_space_assistant/: description.md  description_zh.md  guide.md  guide_zh.md  solution.yaml
solutions/smart_warehouse/: description.md  description_zh.md  guide.md  guide_zh.md  solution.yaml
solutions/xiaozhi_display/: solution.yaml
solutions/xiaozhi_face_recognition/: solution.yaml
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/deb-files/: 99-sensecraft-serial.rules  postinst
src-tauri/icons/: README.md
src-tauri/src/: main.rs
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_10_recamera_deploy.py  test_20_preview_verify.py  test_config_management.py  test_serial_camera.py  test_smart_warehouse.py
tests/integration/: test_api_keys.py  test_api_solutions.py  test_bilingual_loading.py  test_deployment_api_contract.py  test_deployment_params.py  test_mdns_api.py  test_port_configuration.py  test_solution_manager.py  test_websocket_contract.py
tests/simulation/: __init__.py  deployer.py  device_fixtures.py  scenarios.py
tests/unit/: test_actions.py  test_api_key_manager.py  test_auth_middleware.py  test_compose_labels.py  test_config_management.py  test_deployer_registry.py  test_deployment_simulation.py  test_ha_integration_deployer.py  test_localized.py  test_markdown_parser.py  test_mdns_scanner.py  test_models.py  test_nodered_modules.py  test_resource_resolver.py  test_solution_config_validation.py  test_solution_format.py  test_step_registry.py
(+299 files in other folders)
