[project]
name = "provisioning-station"
version = "1.0.0"
description = "IoT Solution Provisioning Platform for Seeed Studio products"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Seeed Studio", email = "support@seeedstudio.com"}
]
keywords = ["iot", "provisioning", "seeed", "esp32", "docker", "deployment"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "esptool>=4.7.0",
    "pyserial>=3.5",
    "xmodem>=0.4.0",
    "paramiko>=3.4.0",
    "scp>=0.14.0",
    "docker>=7.0.0",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "markdown>=3.5.0",
    "paho-mqtt>=2.0.0",
    "psutil>=5.9.0",
    "zeroconf>=0.131.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "ruff>=0.1.0",
]

[dependency-groups]
build = [
    "pyinstaller>=6.0.0",
]
dev = [
    "pre-commit>=4.5.1",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-dependency>=0.6.0",
]

[project.scripts]
provisioning-station = "provisioning_station.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["provisioning_station"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # line too long
    "E402",   # module level import not at top (intentional in main.py for logging setup)
    "E722",   # bare except (common in cleanup code)
    "E741",   # ambiguous variable name
    "F841",   # unused variable (often intentional placeholders)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: End-to-end tests requiring real devices (skip in CI)",
    "device_watcher: Tests requiring SenseCAP Watcher USB",
    "device_recamera: Tests requiring reCamera at 192.168.42.1",
    "device_r1100: Tests requiring R1100 at 192.168.10.76",
    "device_local_docker: Tests requiring local Docker",
    "slow: Tests that take longer than 60 seconds",
]
